@@ -421,6 +421,7 @@ Customizing the data series
   bars: {
     barWidth: number
     align: "left" or "center"
+    horizontal: boolean
   }
 
   lines: {
@@ -466,7 +467,11 @@ contrary to most other measures that are specified in pixels. For
 instance, for time series the unit is milliseconds so 24 * 60 * 60 *
 1000 produces bars with the width of a day. "align" specifies whether
 a bar should be left-aligned (default) or centered on top of the value
-it represents.
+it represents. When "horizontal" is on, the bars are drawn
+horizontally, i.e. from the y axis instead of the x axis; note that
+the bar end points are still defined in the same way so you'll
+probably want to swap the coordinates if you've been plotting vertical
+bars first.
 
 For lines, "steps" specifies whether two adjacent data points are
 connected with a straight (possibly diagonal) line or with first a
