@@ -56,6 +56,8 @@ Changes:
 - The legend labelFormatter now passes the series in addition to just
   the label (suggestion by Vincent Lemeltier).
 
+- Horizontal bars (based on patch by Jason LeBrun).
+
 Bug fixes:
 
 - Fixed two corner-case bugs when drawing filled curves (report and
